nginx/ing-active.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-active
spec:
  rules:
  - host: nginx-active.labaq.life
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-active
            port:
              number: 80
